# papers

./: .env.example  .gitignore  AGENTS.md  AUDIT_EXECUTIVE_SUMMARY.txt  CHANGELOG.md  CITATION.cff  CLAUDE.md  DIRETRIZ_EDITORIAL.md  Dockerfile  GEMINI.md  GUIA_ESCRITA_HUMANIZADA.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt
.claude/: settings.json
.githooks/: pre-commit
.tools/: secret_guard.py
analysis/: MARKET_INSIGHTS_20260518.md  _cohort_canonical_v2.json  _market_insights_20260518.py  _perplexity_nubank_research.json  geo_insights_20260518.json  paper4_tables.md  paper4_tables.py
data/: dashboard.html  dashboard_data.json  finops_alerts.jsonl  finops_checkpoint.json  papers.db
docs/: ARCHITECTURE.md  ARXIV_SUBMISSION_PLAN.md  CHANGELOG.md  DEVELOPMENT_PLAN.md  GEO_50_CONCEITOS_CANONICAL.md  GEO_KNOWLEDGE_BASE_2026.md  GEO_OPERATING_SYSTEM.md  GOVERNANCE.md  IDENTITY_INVENTORY.md  INCIDENT_PIPELINE_2026-03-29.md  INCIDENT_RUN155_FINOPS_GEMINI_2026-06-17.md  MANUAL.md  METHODOLOGY.md  METHODOLOGY_V2.md  PREREGISTRATION_PAPER_4_OSF.md  PUBLISHING_PLAYBOOK.md  REQUIREMENTS.md  RFC-PAPERS-REFACTORING.json  ROADMAP_2026Q2-Q4.md  STATUS.md  WIKIPEDIA_EN_FEASIBILITY.md  WRITING_GUIDE.md
drafts/: devto-papers-week1-20260429.md  hashnode-papers-fintech-20260429.md  linkedin-newsletter-ia-insights-2026-04-29.md  linkedin-newsletter-ia-insights-v2-reboot.md  medium-null-triad-v2-reboot.md  null-triad-v1.md  osf-preregistration-v2.md  research-copy-dia1-de-90.md
governance/: DIA-1-MARCO-20260423.md  INCIDENT-RUN-CANCELLED-20260423.md
(+238 files in other folders)
